--- a/index.html
+++ b/index.html
@@ -123,55 +123,35 @@
 
 </form>
   
+<div id="results"></div>
+
 <script>
- console.log("JS SE SPUSTIL");
-  (async function() {
-  // načtení dat
-  const res = await fetch("./games.json");
-  const data = await res.json();
-  const games = data.games;
+fetch("./games.json")
+  .then(response => response.json())
+  .then(data => {
+    const games = data.games;   // 🔑 TADY BYLA CHYBA
 
-  const resultsEl = document.getElementById("results");
-  const btn = document.getElementById("search-btn");
+    const results = document.getElementById("results");
+    results.innerHTML = "";
 
-  btn.addEventListener("click", () => {
-    resultsEl.innerHTML = ""; // vyčistit předchozí
-
-    const selHraci = document.getElementById("pocet-hracu").value;
-    const selDoba = document.getElementById("herni-doba").value;
-    const selPremysleni = document.getElementById("mira-premysleni").value;
-    const selTyp = document.getElementById("typ-hry").value;
-    const selTema = document.getElementById("tema").value;
-
-    const filtered = games.filter(game => {
-      if (selHraci && !game.pocet_hracu.includes(selHraci)) return false;
-      if (selDoba && game.herni_doba !== selDoba) return false;
-      if (selPremysleni && game.mira_premysleni !== selPremysleni) return false;
-      if (selTyp && !game.typ_hry.includes(selTyp)) return false;
-      if (selTema && game.tema !== selTema) return false;
-      return true;
-    });
-
-    if (filtered.length === 0) {
-      resultsEl.innerHTML = "<p>Žádné hry nevyhovují filtru.</p>";
-      return;
-    }
-
-    filtered.forEach(game => {
+    games.forEach(game => {
       const div = document.createElement("div");
-      div.classList.add("game-row");
       div.innerHTML = `
         <strong>${game.nazev}</strong><br>
-        hráči: ${game.pocet_hracu.join(", ")}<br>
-        doba: ${game.herni_doba}<br>
-        přemýšlení: ${game.mira_premysleni}<br>
-        typ: ${game.typ_hry.join(", ")}<br>
-        téma: ${game.tema}
+        Počet hráčů: ${game.pocet_hracu.join(", ")}<br>
+        Herní doba: ${game.herni_doba}<br>
+        Míra přemýšlení: ${game.mira_premysleni}<br>
+        Typ hry: ${game.typ_hry.join(", ")}<br>
+        Téma: ${game.tema}
+        <hr>
       `;
-      resultsEl.appendChild(div);
+      results.appendChild(div);
     });
+  })
+  .catch(error => {
+    console.error("Chyba při načítání JSON:", error);
   });
-})();
 </script>
+
 </body>
 </html>
