--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
       <option value="příroda">Příroda</option>
       <option value="popkultura">Popkultura</option>
       <option value="dobrodružství">Dobrodružství</option>
+      <option value="abstraktní">Abstraktní</option>
+      <option value="současnost">Současnost</option>
+      <option value="detektivní">Detektivní</option>
+      <option value="hádanky">Hádanky</option>
+      <option value="jídlo">Jídlo</option>
     </select>
   </div>
 
