--- a/index.html
+++ b/index.html
@@ -135,17 +135,17 @@ button:hover {
     <label for="typ-hry">Typ hry</label>
     <select id="typ-hry">
       <option value="">Nezáleží</option>
-      <option value="kooperativní">Kooperativní</option>
-      <option value="deduktivní">Deduktivní</option>
-      <option value="postřehová">Postřehová</option>
-      <option value="vědomostní">Vědomostní</option>
+      <option value="kooperativni">Kooperativní</option>
+      <option value="deduktivni">Deduktivní</option>
+      <option value="postrehova">Postřehová</option>
+      <option value="vedomostni">Vědomostní</option>
       <option value="strategická">Strategická</option>
-      <option value="ekonomická">Ekonomická</option>
-      <option value="příběhová">Příběhová</option>
-      <option value="rodinná">Rodinná</option>
-      <option value="párty">Párty</option>
-      <option value="závodní">Závodní</option>
-      <option value="logická">Logická</option>
+      <option value="ekonomicka">Ekonomická</option>
+      <option value="pribehova">Příběhová</option>
+      <option value="rodinna">Rodinná</option>
+      <option value="party">Párty</option>
+      <option value="zavodni">Závodní</option>
+      <option value="logicka">Logická</option>
     </select>
   </div>
 
@@ -156,17 +156,17 @@ button:hover {
       <option value="historie">Historie</option>
       <option value="fantasy">Fantasy</option>
       <option value="scifi">Sci-fi</option>
-      <option value="zvířata">Zvířata</option>
+      <option value="zvirata">Zvířata</option>
       <option value="sport">Sport</option>
       <option value="vikingové">Vikingové</option>
-      <option value="příroda">Příroda</option>
+      <option value="priroda">Příroda</option>
       <option value="popkultura">Popkultura</option>
-      <option value="dobrodružství">Dobrodružství</option>
-      <option value="abstraktní">Abstraktní</option>
-      <option value="současnost">Současnost</option>
-      <option value="detektivní">Detektivní</option>
-      <option value="hádanky">Hádanky</option>
-      <option value="jídlo">Jídlo</option>
+      <option value="dobrodruzstvi">Dobrodružství</option>
+      <option value="abstraktni">Abstraktní</option>
+      <option value="soucasnost">Současnost</option>
+      <option value="detektivni">Detektivní</option>
+      <option value="hadanky">Hádanky</option>
+      <option value="jidlo">Jídlo</option>
     </select>
   </div>
 
