--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@ button:hover {
     <label for="mira-premysleni">Kolik u hry chcete přemýšlet?</label>
     <select id="mira-premysleni">
       <option value="">Nezáleží</option>
-      <option value="oddechová hra">Oddechová hra</option>
-      <option value="přemýšlecí hra">Přemýšlecí hra</option>
-      <option value="náročná hra">Náročná hra</option>
+      <option value="oddechova hra">Oddechová hra</option>
+      <option value="premysleci hra">Přemýšlecí hra</option>
+      <option value="narocna hra">Náročná hra</option>
     </select>
   </div>
 
@@ -139,7 +139,7 @@ button:hover {
       <option value="deduktivni">Deduktivní</option>
       <option value="postrehova">Postřehová</option>
       <option value="vedomostni">Vědomostní</option>
-      <option value="strategická">Strategická</option>
+      <option value="strategicka">Strategická</option>
       <option value="ekonomicka">Ekonomická</option>
       <option value="pribehova">Příběhová</option>
       <option value="rodinna">Rodinná</option>
@@ -154,7 +154,7 @@ button:hover {
     <select id="tema">
       <option value="">Nezáleží</option>
       <option value="historie">Historie</option>
-      <option value="fantasy">Fantasy</option>
+      <option value="fantasy_mytologie">Fantasy a mytologie</option>
       <option value="scifi">Sci-fi</option>
       <option value="zvirata">Zvířata</option>
       <option value="sport">Sport</option>
