--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ button:hover {
       <option value="scifi">Sci-fi</option>
       <option value="zvirata">Zvířata</option>
       <option value="sport">Sport</option>
-      <option value="vikingové">Vikingové</option>
+      <option value="vikingove">Vikingové</option>
       <option value="priroda">Příroda</option>
       <option value="popkultura">Popkultura</option>
       <option value="dobrodruzstvi">Dobrodružství</option>
