--- a/index.html
+++ b/index.html
@@ -261,6 +261,18 @@ function renderGames(list) {
   }
 
   list.forEach(game => {
+
+    const miraLabel =
+      LABELS.mira?.[game.mira_premysleni] ?? "—";
+
+    const typLabel =
+      game.typ_hry
+        ?.map(t => LABELS.typ?.[t] ?? t)
+        .join(", ") ?? "—";
+
+    const temaLabel =
+      LABELS.tema?.[game.tema] ?? "—";
+
     const div = document.createElement("div");
     div.classList.add("game-row");
 
@@ -268,9 +280,9 @@ function renderGames(list) {
       <strong>${game.nazev}</strong><br>
       Počet hráčů: ${game.pocet_hracu?.join(", ") ?? "—"}<br>
       Herní doba: ${game.herni_doba ?? "—"}<br>
-      Míra přemýšlení: ${game.mira_premysleni ?? "—"}<br>
-      Typ hry: ${game.typ_hry?.join(", ") ?? "—"}<br>
-      Téma: ${LABELS.tema[game.tema] ?? game.tema ?? "—"}
+      Míra přemýšlení: ${miraLabel}<br>
+      Typ hry: ${typLabel}<br>
+      Téma: ${temaLabel}
       <hr>
     `;
 
