--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ button:hover {
       <option value="">Nezáleží</option>
       <option value="pro jednoho">Pro jednoho</option>
       <option value="pro dva">Pro dva</option>
-      <option value="malá skupina (3-4)">Malá skupina (3–4)</option>
-      <option value="větší skupina (5+)">Větší skupina (5+)</option>
+      <option value="mala skupina (3-4)">Malá skupina (3–4)</option>
+      <option value="vetsi skupina (5+)">Větší skupina (5+)</option>
     </select>
   </div>
 
