--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ button:hover {
     <label for="herni-doba">Herní doba</label>
     <select id="herni-doba">
       <option value="">Nezáleží</option>
+      <option value="do 15 minut">Do 15 minut</option>
       <option value="do 30 minut">Do 30 minut</option>
       <option value="30-60 minut">30–60 minut</option>
       <option value="60-120 minut">60–120 minut</option>
