--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ button:hover {
   </div>
 
   <div class="filter-row">
-    <label for="mira-premysleni">Kolik u hry chcete přemýšlet?</label>
+    <label for="mira-premysleni">Jak moc u hry chcete přemýšlet?</label>
     <select id="mira-premysleni">
       <option value="">Nezáleží</option>
       <option value="oddechova hra">Oddechová hra</option>
